web-infras/parser/tests/fixtures/babel/es2022/class-private-properties/asi-failure-inline/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,6)
2|  #x #y
 |    ^
